Import of DDUMONT/Tk-TreeGraph-1.005 from CPAN.
gitpan-cpan-distribution: Tk-TreeGraph
gitpan-cpan-version:      1.005
gitpan-cpan-path:         DDUMONT/Tk-TreeGraph-1.005.tar.gz
gitpan-cpan-author:       DDUMONT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+1999-01-25  Dominique Dumont  <domi@barrayar.grenoble.hp.com>
+
+	* TreeGraph.pm : fixed shortCut and unselectNodes problems
+	  added comments on internal data structures
+
 1999-01-22  Dominique Dumont  <domi@barrayar.grenoble.hp.com>
 
 	* TreeGraph.pm : better doc
