Import of DDUMONT/Tk-TreeGraph-1.010 from CPAN.
gitpan-cpan-distribution: Tk-TreeGraph
gitpan-cpan-version:      1.010
gitpan-cpan-path:         DDUMONT/Tk-TreeGraph-1.010.tar.gz
gitpan-cpan-author:       DDUMONT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+1999-02-12  Dominique Dumont  <domi@barrayar.grenoble.hp.com>
+
+	* TreeGraph.pm (addNode): Added 'after' parameters so addNode can
+	draw itself the arrows.
+
 1999-02-11  Dominique Dumont  <domi@barrayar.grenoble.hp.com>
 
 	* TreeGraph.pm (addNode): coordinate are now handled by the 
