Import of DDUMONT/Tk-TreeGraph-1.014 from CPAN.
gitpan-cpan-distribution: Tk-TreeGraph
gitpan-cpan-version:      1.014
gitpan-cpan-path:         DDUMONT/Tk-TreeGraph-1.014.tar.gz
gitpan-cpan-author:       DDUMONT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+1999-07-23  Dominique Dumont  <domi@barrayar.grenoble.hp.com>
+
+	* TreeGraph.pm :
+	- can draw more compact trees (big changes in the code)
+
 1999-04-21  Dominique Dumont  <domi@barrayar.grenoble.hp.com> v1.011
 
 	* TreeGraph.pm : 
