Import of DDUMONT/Tk-TreeGraph-1.015 from CPAN.
gitpan-cpan-distribution: Tk-TreeGraph
gitpan-cpan-version:      1.015
gitpan-cpan-path:         DDUMONT/Tk-TreeGraph-1.015.tar.gz
gitpan-cpan-author:       DDUMONT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+1999-08-12  Dominique Dumont  <domi@barrayar.grenoble.hp.com> v1.015
+
+	* TreeGraph.pm (addAllShortcuts): 
+	- splined shortcut arrow
+	- bug fix: can now have more than one shortcut starting from a node
+
 1999-07-23  Dominique Dumont  <domi@barrayar.grenoble.hp.com>
 
 	* TreeGraph.pm :
