Import of DDUMONT/Tk-TreeGraph-1.023 from CPAN.
gitpan-cpan-distribution: Tk-TreeGraph
gitpan-cpan-version:      1.023
gitpan-cpan-path:         DDUMONT/Tk-TreeGraph-1.023.tar.gz
gitpan-cpan-author:       DDUMONT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,14 @@
+2000-05-15  Dominique Dumont  <domi@ispserv.grenoble.hp.com> v1.023
+
+	* TreeGraph.pm : 
+	- added flashNode method
+	- changed computing of text size in addNode to use bbox. This way, you
+	  can use other fonts.
+	- added modifyNode
+	- fixed re-draw bug
+	- addNode accepts strings or usual arrayref.
+	- added scroll adjusting in SYNOPSIS
+
 2000-01-25  Dominique Dumont  <domi@ispserv.grenoble.hp.com> v1.016
 
 	* TreeGraph.pm: 
