Import of DDUMONT/Tk-TreeGraph-1.024 from CPAN.
gitpan-cpan-distribution: Tk-TreeGraph
gitpan-cpan-version:      1.024
gitpan-cpan-path:         DDUMONT/Tk-TreeGraph-1.024.tar.gz
gitpan-cpan-author:       DDUMONT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+2001-04-02  Dominique Dumont  <domi@komarr.grenoble.hp.com>
+
+	* TreeGraph.pm :
+ 	- added viewNode method
+	- added -animation option
+        - added demo for Tk widget program
+        - test run now in batch mode
+
 2000-05-15  Dominique Dumont  <domi@ispserv.grenoble.hp.com> v1.023
 
 	* TreeGraph.pm : 
