--- a/README
+++ b/README
@@ -35,6 +35,9 @@ Suggested DSLI line in the Ptk module list:
 Tk::TreeGraph RdpO  Widget to draw a tree in a Canvas    DDUMONT
 
 
+You can run all test with argument '1' to run the test in interactive mode
+with traces. (i.e "perl t/only_node.t 1").
+
 See the embedded documentation in the module for more details.
 
 Comments and suggestions are always welcome.
@@ -43,7 +46,7 @@ Thanks to Ralf Valerien for the bug fix and the spline shortcut arrow.
 
 Legal mumbo jumbo:
 
- Copyright (c) 1999-2000 Dominique Dumont. All rights reserved.
+ Copyright (c) 1999-2001 Dominique Dumont. All rights reserved.
  This program is free software; you can redistribute it and/or
  modify it under the same terms as Perl itself.
 
