Import of DDUMONT/Tk-TreeGraph-1.027 from CPAN.
gitpan-cpan-distribution: Tk-TreeGraph
gitpan-cpan-version:      1.027
gitpan-cpan-path:         DDUMONT/Tk-TreeGraph-1.027.tar.gz
gitpan-cpan-author:       DDUMONT
gitpan-cpan-maturity:     released

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-11  Dominique Dumont  <domi@komarr.grenoble.hp.com>
+
+	* TreeGraph.pm: accept leading dash in method parameter
+	Works with Tk804
+
 2003-10-31  Dominique Dumont  <domi@komarr.grenoble.hp.com>
 
 	* TreeGraph.pm (addAllShortcuts): 
