Import of DDUMONT/Tk-TreeGraph-1.029 from CPAN.
gitpan-cpan-distribution: Tk-TreeGraph
gitpan-cpan-version:      1.029
gitpan-cpan-path:         DDUMONT/Tk-TreeGraph-1.029.tar.gz
gitpan-cpan-author:       DDUMONT
gitpan-cpan-maturity:     released

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-10-14  Dominique Dumont  <domi@komarr.grenoble.hp.com> v1.029
+
+	* TreeGraph.pm (setArrow): fix bug related to Canvas find method
+	which returns now an array ref in scalar context. I do not know
+	which version of Tk broke TreeGraph, but this new version was
+	tested with Tk 804.027
+	(getCurrentNodeId): ditto. Thanks to Thomas Flasche for the patch.
+
 2003-12-11  Dominique Dumont  <domi@komarr.grenoble.hp.com>
 
 	* TreeGraph.pm: accept leading dash in method parameter
